--- a/cjevent05/src/main/webapp/resources/css/style.css
+++ b/cjevent05/src/main/webapp/resources/css/style.css
@@ -128,3 +128,77 @@ body {
 	color: #4d3524;
 	opacity: 0.60 !important;
 }
+
+.als-container {
+	position: relative;
+	margin: 0px auto;
+}
+
+.als-viewport {
+	top: 270px;
+	width:100px;
+	right:100px;
+	position: relative;
+	overflow: hidden;
+	margin: 0px auto;
+}
+
+.als-wrapper {
+	position: relative;
+	list-style: none;
+}
+
+.als-item {
+	top: 0px;
+	position: relative;
+	display: block;
+	text-align: center;
+	cursor: pointer;
+	float: left;
+}
+
+.als-prev, .als-next {
+	position: absolute;
+	cursor: pointer;
+	clear: both;
+}
+
+#lista1 {
+	
+	margin: 60px auto 80px auto;
+
+}
+
+#lista1 .als-item {
+	
+	margin: 0px 30px;
+	min-height: 3000px;
+	min-width: 128px;
+	
+}
+
+#lista1 .als-item img {
+
+	position: relative;
+	display: block;
+	vertical-align: middle;
+	margin-bottom: 8px;
+}
+
+#lista1 .als-prev, #lista1 .als-next {
+	top: 258px;
+	width: 15px;
+	height: 22px;
+}
+
+#lista1 .als-prev {
+	top: 340px;
+	left: 70px;
+	heigtt : 100px;
+}
+
+#lista1 .als-next {
+	top: 340px;
+	right: 680px;
+}
+
